first stage ov dev

--- a/src/pug/cover-block.pug
+++ b/src/pug/cover-block.pug
@@ -5,7 +5,7 @@ section.cover-block#about
 				div.row
 					div.cover-block__item.cover-block__poster
 						img.cover-block__img(src=coverBlock[i].poster)
-					div.cover-block__item
+					div.cover-block__item.cover-block__wrapp
 						div.cover-block__text-container
 							h3.cover-block__title.base-title.base-title--type1 #{coverBlock[i].title}
 							
@@ -21,7 +21,7 @@ section.cover-block#about
 								p.cover-block__text #{coverBlock[i].text}
 			else
 				div.row
-					div.cover-block__item
+					div.cover-block__item.cover-block__wrapp
 						div.cover-block__text-container
 							h3.cover-block__title.base-title.base-title--type1 #{coverBlock[i].title}
 							p.cover-block__text #{coverBlock[i].text}
