--- a/src/pug/footer.pug
+++ b/src/pug/footer.pug
@@ -4,12 +4,8 @@ footer.main-footer
 			div.col-lg-2.col-md-2.col-sm-12
 				a.main-footer__logo(href='/')
 					img.main-footer__img(src='../images/FHR-LOGO-1.png')
-			div.col-lg-6.col-md-5.col-sm-12
-				ul.main-foot__nav.fl_aic_jcc.navigate
-					each href, prop in nav
-						li.navigate__item
-							a.navigate__link(href = href) #{prop}
-			div.col-lg-4.col-md-5.col-sm-12
+			
+			div.col-lg-5.offset-lg-5.col-md-6.offset-md-4.col-sm-12
 				div.main-footer__copyright
 					p
 						span Copyright © 2017 Foundation Homes.
