--- a/src/pug/topline.pug
+++ b/src/pug/topline.pug
@@ -4,12 +4,12 @@ div.top-line
 			div.col-lg-2.col-md-2.col-sm-3.full-670
 				a.top-line__logo-link(href='/')
 					img.top-line__logo-img(alt="Foundation Homes" src="./images/FHR-LOGO-2.png") 
-			div.col-xl-6.col-lg-4.hidden-md
+			div.col-xl-6.col-lg-5.hidden-md
 				ul.top-line__nav.navigate.fl_aic_jcc
 					each  href, prop in nav
 						li.navigate__item
 							a.navigate__link(href = href) #{prop}
-			div.col-xl-4.col-lg-6.col-md-10.col-sm-9.fl_aic_jcsb.fl_md_jce.fl_670_jcc.full-670
+			div.col-xl-4.col-lg-5.col-md-10.col-sm-9.fl_aic_jcsb.fl_md_jce.full-670.fl_670_jcc
 				img.top-line__warranty(src="./images/warranty-sign.png" alt="2-10 Home Buyers Warranty")
 
 				a.top-line__phone(href="tel:704-746-9366") 704-746-9366
