--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -13,11 +13,13 @@ html {
 body{
 	overflow-x: hidden;
 	min-width: 320px;
+	width: 100%;
 	color: $color-light_black;
 	font-size: 16px;
 	margin: 0;
 	line-height: 1.75;
 	position: relative;
+	display: block;
 }
 article, aside, footer, header, nav, section {
  display: block;
@@ -109,6 +111,11 @@ a{
 	color: $color-white;
 	transition: 0.2s;
 	text-align: center;
+	@include max-screen(480px){
+		font-size: em(20px);
+		padding: 0 10px;
+		line-height: 45px;
+	}
 	&:hover{
 		text-decoration: underline;
 	}
