--- a/src/scss/compomemts/_cover-block.scss
+++ b/src/scss/compomemts/_cover-block.scss
@@ -4,6 +4,9 @@
 		min-height: 480px;
 		width: 50%;
 		position: relative;	
+		@include max-screen(991px){
+			width: 100%;
+		}
 	}
 	&__poster{
 		object-fit: cover;
@@ -17,10 +20,26 @@
 			background: linear-gradient(180deg, #111f2c 0, #022143 100%);
 			opacity: .2;
     	z-index: 100;
+  
+		}
+		@include max-screen(991px){
+			order: 1;
+		}
+	}
+	&__wrapp{
+		@include max-screen(991px){
+			order: 2;
 		}
 	}
 	&__text-container{
 		max-width: 420px;
+		padding: 20px 15px;
+		@include max-screen(991px){
+			max-width: 670px;
+		}
+		@include max-screen(767px){
+			max-width: 480px;	
+		}
 	}
 	&__title{
 		text-align: left;
@@ -35,6 +54,7 @@
 		font-size: em(16px);
 		line-height: 24px;
 		opacity: 0.7;
+
 	}
 	&__link{
 		text-decoration: none;
