--- a/src/scss/compomemts/_main-form.scss
+++ b/src/scss/compomemts/_main-form.scss
@@ -34,8 +34,12 @@
 		}
 	}
 	&__input{
-		width: 285px;
+		max-width: 285px;
+		width: 100%;
 		height: 50px;
+		@include max-screen(991px){
+			max-width: 270px;
+		}
 	}
 	&__comments{
 		width: 100%;
