--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -19,29 +19,5 @@
 @import "./compomemts/deal.scss";
 @import "./compomemts/main-form.scss";
 @import "./compomemts/awards.scss";
+@import "./compomemts/footer.scss";
 
-
-.main-footer{
-	min-height: 180px;
-	padding: 56px 0;
-	background-color: $theme_cl;
-	&__img{
-		width: 60%;
-		padding: 0;
-		margin: 0;
-	}
-	&__copyright{
-		opacity: 0.7;
-		color: $cl3;
-		font-family: $text-font, sans-serif;
-		font-size: em(11px);
-		font-weight: 400;
-		line-height: 12px;
-		text-align: right;
-		margin-top: 20px;
-	}
-	&__copyright-link{
-		color: #1268ff;
-		display: inline-block;
-	}
-}
